<resources>
    <string name="app_name">DragonScroll</string>

    <string name="edit">Edit</string>
    <string name="no_books">No books added!</string>
    <string name="summary">Summary</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="books_read">Books Read: 0</string>
    <string name="favorite_book">Favorite Book: none</string>
    <string name="start_date">Start Date: none</string>
    <string name="end_date">End Date: none</string>

    <string name="profile_uri_key">com.teamoranges.dragonscroll.PROFILE_URI</string>
    <string name="favorite_book_key">com.teamoranges.dragonscroll.FAVORITE_BOOK</string>

    <string name="set_as_favorite">Set As Favorite</string>
    
    <string name="profile_image_description">User profile image</string>

    <!-- SharedPreferences Keys -->
    <string name="preference_file_key">com.teamoranges.dragonscroll.PREFERENCE_FILE</string>
    <string name="profile_name_key">com.teamoranges.dragonscroll.PROFILE_NAME</string>
    <string name="profile_name_default">Profile Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Dark Mode Preferences -->
    <string name="dark_mode_key">dark_mode_preference</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_summary">Toggle between dark and light mode</string>
    <string name="default_dark_mode_value">system</string>

    <!-- High Contrast Preferences -->
    <string name="high_contrast_title">High Contrast</string>
    <string name="high_contrast_summary">Toggle high contrast mode</string>

    <!-- Text Size Preferences -->
    <string name="text_size_title">Text Size</string>
    <string name="text_size_summary">Adjust the text size of the app</string>
    <string name="text_size_preference_key">text_size_preference</string>

    <!-- Themes Preferences -->
    <string name="themes_title">Themes</string>
    <string name="themes_summary">Change theme</string>
    <string name="themes_preference_key">themes_preference</string>
    <string name="default_theme_value">theme_default</string>

    <!-- Clear Preferences Preferences -->
    <string name="clear_prefs_key">clear_prefs_preference</string>
    <string name="clear_prefs_title">Clear Preferences</string>
    <string name="clear_prefs_summary">Clear application preferences</string>

    <!-- Nuke Database Preferences -->
    <string name="nuke_db_key">nuke_db_preference</string>
    <string name="nuke_db_title">Nuke Database</string>
    <string name="nuke_db_summary">Delete all save data</string>
</resources>