<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:entries="@array/themes_entries"
        app:entryValues="@array/themes_values"
        app:key="@string/themes_preference_key"
        app:summary="@string/themes_summary"
        app:title="@string/themes_title" />

    <ListPreference
        app:key="@string/dark_mode_key"
        app:title="@string/dark_mode_title"
        app:summary="@string/dark_mode_summary"
        app:entries="@array/dark_mode_entries"
        app:entryValues="@array/dark_mode_values"
        app:defaultValue="system" />

    <SeekBarPreference
        app:defaultValue="100"
        app:key="@string/text_size_preference_key"
        android:max="200"
        app:min="50"
        app:showSeekBarValue="true"
        app:summary="@string/text_size_summary"
        app:title="@string/text_size_title" />

    <Preference
        app:key="@string/clear_prefs_key"
        app:summary="@string/clear_prefs_summary"
        app:title="@string/clear_prefs_title" />

    <Preference
        app:key="@string/nuke_db_key"
        app:summary="@string/nuke_db_summary"
        app:title="@string/nuke_db_title" />

</PreferenceScreen>